crates/saldo-ws/tests/saldo_ws_api/snapshots/saldo_ws_api__lids__test_invalid_input_returns_422-html.snap
---
source: crates/saldo-ws/tests/saldo_ws_api/lids.rs
expression: data
---
{
  "location": null,
  "message": "'bad-input' is not a lexeme nor a lemma"
}
