crates/saldo-ws/tests/saldo_ws_api/snapshots/saldo_ws_api__lids__test_json_missing_returns_404-qt..1.snap
---
source: crates/saldo-ws/tests/saldo_ws_api/lids.rs
expression: data
---
{
  "data": {
    "message": "There is no lexeme 'qt..1'"
  },
  "status_code": 404
}
