crates/saldo-ws/tests/saldo_ws_api/snapshots/saldo_ws_api__lids__test_json_valid_input_returns_200-dväljas..1.snap
---
source: crates/saldo-ws/tests/saldo_ws_api/lids.rs
expression: data
---
{
  "fm": "bo..1",
  "fp": "PRIM..1",
  "l": [
    "dväljas..vb.1"
  ],
  "lex": "dväljas..1",
  "mf": [],
  "path": [
    "bo..1"
  ],
  "pf": [],
  "ppath": []
}
